Adding ability to style column data. Text alignment, font weight and font style.

--- a/src/templates/cellTemplate.html
+++ b/src/templates/cellTemplate.html
@@ -1,1 +1,1 @@
-<div class="ngCellText" ng-class="col.colIndex()"><span ng-cell-text>{{COL_FIELD CUSTOM_FILTERS}}</span></div>
+<div class="ngCellText" ng-style="{ 'text-align': col.textAlign, 'font-weight': col.fontWeight, 'font-style': col.fontStyle }" ng-class="col.colIndex()"><span ng-cell-text>{{COL_FIELD CUSTOM_FILTERS}}</span></div>
