feat[Core] commit for #2483.  Adds a showGridFooter option that will create a grid footer with the Total Items and Shown Items displayed.  Also shows Selected Items if using Selection feature.
 Breaking Changes in this commit:
 showFooter option renamed to showColumnFooter
 footerRowHeight option renamed to columnFooterHeight

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -19,6 +19,10 @@
   .border-radius(@topPanelRadius, 0, 0, @topPanelRadius);
 }
 
+.ui-grid-grid-footer {
+  float: left;
+  width: 100%;
+}
 
 .ui-grid-footer-viewport {
   overflow: hidden; // Disable so menus show up
