--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -26,6 +26,7 @@
   <div ui-grid-menu-button ng-if="grid.options.enableGridMenu"></div>
 
   <div ui-grid-render-container container-id="'body'" col-container-name="'body'" row-container-name="'body'" bind-scroll-horizontal="true" bind-scroll-vertical="true" enable-horizontal-scrollbar="grid.options.enableHorizontalScrollbar" enable-vertical-scrollbar="grid.options.enableVerticalScrollbar"></div>
+  <div ui-grid-grid-footer ng-if="grid.options.showGridFooter"> </div>
 
   <div ui-grid-column-menu ng-if="grid.options.enableColumnMenus"></div>
 
