--- a/src/templates/ui-grid/ui-grid-footer.html
+++ b/src/templates/ui-grid/ui-grid-footer.html
@@ -1,4 +1,4 @@
-<div class="ui-grid-footer-panel">
+<div class="ui-grid-footer-panel ui-grid-footer-aggregates-row">
     <div class="ui-grid-footer ui-grid-footer-viewport">
         <div class="ui-grid-footer-canvas">
             <div ng-repeat="col in colContainer.renderedColumns track by col.colDef.name" ui-grid-footer-cell col="col" render-index="$index" class="ui-grid-footer-cell clearfix" ng-style="$index === 0 && colContainer.columnStyle($index)"></div>
