--- a/src/templates/ui-grid/uiGridRenderContainer.html
+++ b/src/templates/ui-grid/uiGridRenderContainer.html
@@ -4,6 +4,6 @@
   <div ui-grid-footer ng-if="grid.options.showFooter"></div>
 
     <!-- native scrolling -->
-  <div ui-grid-native-scrollbar ng-if="enableVerticalScrollbar" type="vertical"></div>
-  <div ui-grid-native-scrollbar ng-if="enableHorizontalScrollbar" type="horizontal"></div>
+  <!--<div ui-grid-native-scrollbar ng-if="enableVerticalScrollbar" type="vertical"></div>-->
+  <!--<div ui-grid-native-scrollbar ng-if="enableHorizontalScrollbar" type="horizontal"></div>-->
 </div>
