feat(Core): Implementation for #2483.  Adds a showGridFooter option that will create a grid footer with the Total Items and Shown Items displayed.  Also shows Selected Items if using Selection feature.
BREAKING CHANGE: showFooter option renamed to showColumnFooter;  footerRowHeight option renamed to columnFooterHeight

--- a/src/templates/ui-grid/uiGridRenderContainer.html
+++ b/src/templates/ui-grid/uiGridRenderContainer.html
@@ -1,7 +1,7 @@
 <div class="ui-grid-render-container">
   <div ui-grid-header></div>
   <div ui-grid-viewport></div>
-  <div ui-grid-footer ng-if="grid.options.showFooter"></div>
+  <div ui-grid-footer ng-if="grid.options.showColumnFooter"></div>
 
     <!-- native scrolling -->
   <!--<div ui-grid-native-scrollbar ng-if="enableVerticalScrollbar" type="vertical"></div>-->
