--- a/src/templates/ui-grid/ui-grid-footer.html
+++ b/src/templates/ui-grid/ui-grid-footer.html
@@ -2,6 +2,7 @@
     <div class="ui-grid-footer ui-grid-footer-viewport">
         <div class="ui-grid-footer-canvas">
             <div ng-repeat="col in colContainer.renderedColumns track by col.colDef.name" ui-grid-footer-cell col="col" render-index="$index" class="ui-grid-footer-cell clearfix" ng-style="$index === 0 && colContainer.columnStyle($index)"></div>
+            <div class="ui-grid-footer-cell" ng-style="grid.getScrollbarWidthStyle()"></div>
         </div>
     </div>
 </div>
