chore(RTL): Refactor classes for less verbosity
fix(Rendering): Replace vertical-bar element with CSS borders

Fixes #2579

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -51,6 +51,8 @@
   top: 0;
   bottom: 0;
   background-color: inherit;
+  border-right: @gridBorderWidth solid;
+  border-color: @headerVerticalBarColor;
 
   .user-select(none);
 
