--- a/src/templates/ui-grid/uiGridHeaderCell.html
+++ b/src/templates/ui-grid/uiGridHeaderCell.html
@@ -1,5 +1,5 @@
 <div ng-class="{ 'sortable': sortable }">
-  <div class="ui-grid-vertical-bar">&nbsp;</div>
+  <!-- <div class="ui-grid-vertical-bar">&nbsp;</div> -->
   <div class="ui-grid-cell-contents" col-index="renderIndex">
     <span>{{ col.displayName CUSTOM_FILTERS }}</span>
 
