--- a/src/less/header.less
+++ b/src/less/header.less
@@ -7,7 +7,7 @@
 
 .ui-grid-header {
   border-bottom: 1px solid @borderColor;
-  box-sizing: content-box;;
+  box-sizing: content-box;
 }
 
 .ui-grid-top-panel {
@@ -53,6 +53,7 @@
   background-color: inherit;
   border-right: @gridBorderWidth solid;
   border-color: @headerVerticalBarColor;
+  box-sizing: border-box;
 
   .user-select(none);
 
