--- a/src/less/body.less
+++ b/src/less/body.less
@@ -15,6 +15,8 @@
   // overflow: auto; // TODO(c0bra): turn back on when virtual repeater is hooked up
   min-height: 20px;
   position: relative;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 
   :focus {
     outline: none;
