--- a/src/templates/ui-grid/ui-grid-footer.html
+++ b/src/templates/ui-grid/ui-grid-footer.html
@@ -1,7 +1,11 @@
 <div class="ui-grid-footer-panel ui-grid-footer-aggregates-row">
-    <div class="ui-grid-footer ui-grid-footer-viewport">
-        <div class="ui-grid-footer-canvas">
-            <div ng-repeat="col in colContainer.renderedColumns track by col.colDef.name" ui-grid-footer-cell col="col" render-index="$index" class="ui-grid-footer-cell ui-grid-clearfix" ng-style="$index === 0 && colContainer.columnStyle($index)"></div>
+  <div class="ui-grid-footer ui-grid-footer-viewport">
+    <div class="ui-grid-footer-canvas">
+      <div class="ui-grid-footer-cell-wrapper" ng-style="colContainer.headerCellWrapperStyle()">
+        <div class="ui-grid-footer-cell-row">
+          <div ng-repeat="col in colContainer.renderedColumns track by col.colDef.name" ui-grid-footer-cell col="col" render-index="$index" class="ui-grid-footer-cell ui-grid-clearfix"></div>
         </div>
+      </div>
     </div>
+  </div>
 </div>
