--- a/src/less/body.less
+++ b/src/less/body.less
@@ -74,3 +74,20 @@
     opacity: 0.66;
   }
 }
+
+[ui-grid-no-data] {
+  width: 100%;
+  height: 100%;
+
+  .ui-grid-no-data {
+    width: 100%;
+    height: 100%;
+    display: table;
+
+    .ui-grid-no-data-content {
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center;
+    }
+  }
+}
