--- a/src/templates/ui-grid/uiGridViewport.html
+++ b/src/templates/ui-grid/uiGridViewport.html
@@ -1,7 +1,10 @@
 <div class="ui-grid-viewport"  ng-style="colContainer.getViewPortStyle()">
-  <div class="ui-grid-canvas">
+  <div class="ui-grid-canvas" ng-show="rowContainer.renderedRows.length > 0">
     <div ng-repeat="(rowRenderIndex, row) in rowContainer.renderedRows track by $index" class="ui-grid-row" ng-style="rowContainer.rowStyle(rowRenderIndex)">
       <div ui-grid-row="row" row-render-index="rowRenderIndex"></div>
     </div>
+  </div>
+  <div ui-grid-no-data ng-show="rowContainer.renderedRows.length == 0">
+
   </div>
 </div>
