Bring back the ability to specify a custom menu button template, and fix how the grid menu template is set.

--- a/src/templates/ui-grid/ui-grid-menu-button.html
+++ b/src/templates/ui-grid/ui-grid-menu-button.html
@@ -2,5 +2,5 @@
   <div class="ui-grid-icon-container">
     <i class="ui-grid-icon-menu">&nbsp;</i>
   </div>
-  <div ui-grid-menu menu-items="menuItems"></div>
+  <div ui-grid-menu menu-items="menuItems" template-url="menuTemplate"></div>
 </div>
