--- a/src/templates/ui-grid/uiGridCell.html
+++ b/src/templates/ui-grid/uiGridCell.html
@@ -1,1 +1,1 @@
-<div class="ui-grid-cell-contents">{{COL_FIELD CUSTOM_FILTERS}}</div>
+<div class="ui-grid-cell-contents" title="TOOLTIP">{{COL_FIELD CUSTOM_FILTERS}}</div>
