--- a/src/templates/ui-grid/uiGridHeaderCell.html
+++ b/src/templates/ui-grid/uiGridHeaderCell.html
@@ -13,7 +13,8 @@
   </div>
 
   <div ng-if="filterable" class="ui-grid-filter-container" ng-repeat="colFilter in col.filters">
-    <input type="text" class="ui-grid-filter-input" ng-model="colFilter.term" ng-attr-placeholder="{{colFilter.placeholder || ''}}" />
+    <input ng-if="filterType === 'input'" type="text" class="ui-grid-filter-input" ng-model="colFilter.term" ng-attr-placeholder="{{colFilter.placeholder || ''}}" />
+    <select ng-if="filterType === 'select'" class="ui-grid-filter-input" ng-model="colFilter.term" ng-attr-placeholder="{{colFilter.placeholder || ''}}" ng-options="option.value as option.label CUSTOM_FILTERS for option in filterOptions"></select>
 
     <div class="ui-grid-filter-button" ng-click="colFilter.term = null">
       <i class="ui-grid-icon-cancel" ng-show="!!colFilter.term">&nbsp;</i> <!-- use !! because angular interprets 'f' as false -->
