refactor(core): Change scrolling events. Various performance improvements in scrolling
Before this change, scrolling Events were being fire for each render container.  Now, a ScrollBegin and ScrollEnd event is fired once for the grid.  ScrollTo methods were moved from cellNav into core and also changed to return a promise.

 BREAKING CHANGE:
 Two events are now emitted on scroll:

 grid.api.core.ScrollBegin
 grid.api.core.ScrollEnd

 Before:
 grid.api.core.ScrollEvent
 After:
grid.api.core.ScrollBegin

ScrollToIfNecessary and ScrollTo moved from cellNav to core and grid removed from arguments
Before:
grid.api.cellNav.ScrollToIfNecessary(grid, gridRow, gridCol)
grid.api.cellNav.ScrollTo(grid, rowEntity, colDef)

After:
grid.api.core.ScrollToIfNecessary(gridRow, gridCol)
grid.api.core.ScrollTo(rowEntity, colDef)

GridEdit/cellNav
When using cellNav, a cell no longer receives focus.  Instead the viewport always receives focus.  This eliminated many bugs associated with scrolling and focus.

If you have a custom editor, you will no longer receive keyDown/Up events from the readonly cell.  Use the cellNav api viewPortKeyDown to capture any needed keydown events.  see GridEdit.js for an example

--- a/src/less/body.less
+++ b/src/less/body.less
@@ -18,9 +18,8 @@
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 
-  // requested in #2312, IE9 compatibility with exporter.  I have no ability to test this, so assuming it's needed PaulL
-  :focus {
-    outline: none;
+  &:focus {
+    outline: none !important;
   }
 }
 
