added filter attribute 'disableCancelFilterButton' and select filter default empty option

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -214,4 +214,8 @@ select.ui-grid-filter-select {
   &:hover {
     border: @gridBorderWidth solid  @borderColor;
   }
+
+  .ui-grid-filter-cancel-button-hidden & {
+    width: 100%;
+  }
 }
