--- a/src/templates/ui-grid/uiGridHeaderCell.html
+++ b/src/templates/ui-grid/uiGridHeaderCell.html
@@ -12,19 +12,21 @@
     <i class="ui-grid-icon-angle-down">&nbsp;</i>
   </div>
 
-  <div ng-if="filterable" class="ui-grid-filter-container" ng-repeat="colFilter in col.filters">
+  <div ng-if="filterable" class="ui-grid-filter-container" ng-repeat="colFilter in col.filters" ng-class="{'ui-grid-filter-cancel-button-hidden' : colFilter.disableCancelFilterButton === true }">
     <div ng-if="colFilter.type !== 'select'">
       <input type="text" class="ui-grid-filter-input" ng-model="colFilter.term" ng-attr-placeholder="{{colFilter.placeholder || ''}}" />
 
-      <div class="ui-grid-filter-button" ng-click="colFilter.term = null">
+      <div class="ui-grid-filter-button" ng-click="colFilter.term = null" ng-if="!colFilter.disableCancelFilterButton">
         <i class="ui-grid-icon-cancel" ng-show="!!colFilter.term">&nbsp;</i> <!-- use !! because angular interprets 'f' as false -->
       </div>
     </div>
     
     <div ng-if="colFilter.type === 'select'">
-      <select class="ui-grid-filter-select" ng-model="colFilter.term" ng-attr-placeholder="{{colFilter.placeholder || ''}}" ng-options="option.value as option.label for option in colFilter.selectOptions"></select>
+      <select class="ui-grid-filter-select" ng-model="colFilter.term" ng-attr-placeholder="{{colFilter.placeholder || ''}}" ng-options="option.value as option.label for option in colFilter.selectOptions">
+        <option value=""></option>
+      </select>
 
-      <div class="ui-grid-filter-button-select" ng-click="colFilter.term = null">
+      <div class="ui-grid-filter-button-select" ng-click="colFilter.term = null" ng-if="!colFilter.disableCancelFilterButton">
         <i class="ui-grid-icon-cancel" ng-show="!!colFilter.term">&nbsp;</i> <!-- use !! because angular interprets 'f' as false -->
       </div>
     </div>
