fix(Column Resizing): Prevent selection in IE9
IE9 requires a `unselectable="on"` property for preventing selection.
Adding this to the resizer elements seems to have fixed the issue.

Fixes #2594

--- a/src/features/resize-columns/templates/columnResizer.html
+++ b/src/features/resize-columns/templates/columnResizer.html
@@ -4,5 +4,6 @@
   class="ui-grid-column-resizer"
   col="col"
   position="right"
-  render-index="renderIndex">
+  render-index="renderIndex"
+  unselectable="on">
 </div>
