Styling customizations in vars for DA

--- a/src/less/cell.less
+++ b/src/less/cell.less
@@ -27,6 +27,12 @@
   overflow: hidden;
   height: 100%;
   // width: 100%;
+	span {
+		font-family: @cellFontFamily;
+		font-size: @cellFontSize;
+		font-weight: @cellFontWeight;
+		color: @cellFontColor;
+	}
 }
 
 .ui-grid-cell-contents-hidden {
