--- a/src/features/expandable/templates/expandableScrollFiller.html
+++ b/src/features/expandable/templates/expandableScrollFiller.html
@@ -1,9 +1,9 @@
 <div ng-if="expandableRow.shouldRenderFiller()"
      style="float:left; margin-top: 2px; margin-bottom: 2px"
      ng-style="{ width: (grid.getViewportWidth()) + 'px',
-              height: grid.options.expandableRowHeight + 'px', 'margin-left': grid.options.rowHeader.rowHeaderWidth + 'px' }"
+              height: row.expandedRowHeight + 'px', 'margin-left': grid.options.rowHeader.rowHeaderWidth + 'px' }"
      >
     <i class="ui-grid-icon-spin5 ui-grid-animate-spin" ng-style=
-            "{ 'margin-top': ( grid.options.expandableRowHeight/2 - 5) + 'px',
+            "{ 'margin-top': ( row.expandedRowHeight/2 - 5) + 'px',
             'margin-left' : ((grid.getViewportWidth() - grid.options.rowHeader.rowHeaderWidth)/2 - 5) + 'px' }">
      </i></div>
