For SELECT filter ng-options, use track by instead of selectAs
This fixes the dropdown view when initializing the dropdown value’s
"term" or when setting the "term" value programmatically such as during
table restore state.

--- a/src/templates/ui-grid/ui-grid-filter.html
+++ b/src/templates/ui-grid/ui-grid-filter.html
@@ -8,7 +8,7 @@
   </div>
   
   <div ng-if="colFilter.type === 'select'">
-    <select class="ui-grid-filter-select" ng-model="colFilter.term" ng-attr-placeholder="{{colFilter.placeholder || ''}}" ng-options="option.value as option.label for option in colFilter.selectOptions">
+    <select class="ui-grid-filter-select" ng-model="colFilter.term" ng-attr-placeholder="{{colFilter.placeholder || ''}}" ng-options="option.label for option in colFilter.selectOptions track by option.label">
       <option value=""></option>
     </select>
 
