--- a/src/features/tree-view/templates/treeViewRowHeaderButtons.html
+++ b/src/features/tree-view/templates/treeViewRowHeaderButtons.html
@@ -1,4 +1,4 @@
 <div class="ui-grid-tree-view-row-header-buttons" ng-class="{'ui-grid-tree-view-header': row.treeLevel > - 1}" ng-click="treeViewButtonClick(row, $event)">
-  <i ng-class="{'ui-grid-icon-minus-squared': row.treeExpandedState.state === 'expanded', 'ui-grid-icon-plus-squared': row.treeExpandedState.state === 'collapsed'}" ng-style="{'padding-left': grid.options.treeViewIndent * row.entity.$$treeLevel + 'px'}"></i>
+  <i ng-class="{'ui-grid-icon-minus-squared': ( grid.options.showTreeExpandNoChildren || row.treeExpandedState.childCount > 0 ) && row.treeExpandedState.state === 'expanded', 'ui-grid-icon-plus-squared': ( grid.options.showTreeExpandNoChildren || row.treeExpandedState.childCount > 0 ) && row.treeExpandedState.state === 'collapsed'}" ng-style="{'padding-left': grid.options.treeViewIndent * row.entity.$$treeLevel + 'px'}"></i>
   &nbsp;
 </div>
