--- a/src/features/cellnav/less/cellNav.less
+++ b/src/features/cellnav/less/cellNav.less
@@ -14,3 +14,7 @@
   width:0px;
   height:0px;
 }
+
+.ui-grid-row-highlighted  > [ui-grid-row] > .ui-grid-cell{
+  background-color: @focusedCell !important;
+}
