--- a/src/templates/ui-grid/uiGridHeaderCell.html
+++ b/src/templates/ui-grid/uiGridHeaderCell.html
@@ -1,6 +1,6 @@
 <div ng-class="{ 'sortable': sortable }">
   <!-- <div class="ui-grid-vertical-bar">&nbsp;</div> -->
-  <div class="ui-grid-cell-contents" col-index="renderIndex">
+  <div class="ui-grid-cell-contents" col-index="renderIndex" title="TOOLTIP">
     <span>{{ col.displayName CUSTOM_FILTERS }}</span>
 
     <span ui-grid-visible="col.sort.direction" ng-class="{ 'ui-grid-icon-up-dir': col.sort.direction == asc, 'ui-grid-icon-down-dir': col.sort.direction == desc, 'ui-grid-icon-blank': !col.sort.direction }">
