add translate to i18n 'es' on pagination directive.

--- a/src/features/pagination/templates/pagination.html
+++ b/src/features/pagination/templates/pagination.html
@@ -16,7 +16,7 @@
     <div class="ui-grid-pager-count-container">
       <div class="ui-grid-pager-count">
         <span ng-show="grid.options.totalItems > 0">
-            {{showingLow}} - {{showingHigh}} of {{grid.options.totalItems}} {{totalItemsLabel}}
+            {{showingLow}} - {{showingHigh}} {{paginationOf}} {{grid.options.totalItems}} {{totalItemsLabel}}
         </span>
       </div>
   </div>
