--- a/src/templates/ui-grid/ui-grid-filter.html
+++ b/src/templates/ui-grid/ui-grid-filter.html
@@ -13,7 +13,7 @@
     </select>
 
     <div class="ui-grid-filter-button-select" ng-click="colFilter.term = null" ng-if="!colFilter.disableCancelFilterButton">
-      <i class="ui-grid-icon-cancel" ng-show="colFilter.term !== undefined && colFilter.term != null">&nbsp;</i>
+      <i class="ui-grid-icon-cancel" ng-show="colFilter.term !== undefined && colFilter.term != null && colFilter.term !== ''">&nbsp;</i>
     </div>
   </div>
 </div>
