fix(core): add a horizontal scrollbar placeholder when needed

--- a/src/less/grid.less
+++ b/src/less/grid.less
@@ -19,6 +19,10 @@
   width: @gridBorderWidth;
 }
 
+.ui-grid-scrollbar-placeholder{
+  background-color: @headerVerticalBarColor;
+}
+
 .ui-grid-header-cell:not(:last-child) .ui-grid-vertical-bar {
   background-color: @headerVerticalBarColor;
 }
