Adds very basic screen reader accessibility functionality
Adds aria roles to the grid to allow screen readers to understand what text to read out.

Adds screen reader only css element

Allows you to make a dom element have content exclusively for a screen
reader.

Adds an accessibility demo to help with testing

--- a/src/templates/ui-grid/uiGridRenderContainer.html
+++ b/src/templates/ui-grid/uiGridRenderContainer.html
@@ -1,4 +1,5 @@
-<div class="ui-grid-render-container" ng-style="{ 'margin-left': colContainer.getMargin('left') + 'px', 'margin-right': colContainer.getMargin('right') + 'px' }">
+<div role="grid" class="ui-grid-render-container" ng-style="{ 'margin-left': colContainer.getMargin('left') + 'px', 'margin-right': colContainer.getMargin('right') + 'px' }">
+  <!-- All of these dom elements are replaced in place -->
   <div ui-grid-header></div>
   <div ui-grid-viewport></div>
   <div ng-if="colContainer.needsHScrollbarPlaceholder()" class="ui-grid-scrollbar-placeholder" style="height:{{colContainer.grid.scrollbarHeight}}px"></div>
