--- a/src/templates/ui-grid/uiGridViewport.html
+++ b/src/templates/ui-grid/uiGridViewport.html
@@ -1,6 +1,6 @@
-<div class="ui-grid-viewport"  ng-style="colContainer.getViewportStyle()">
+<div role="rowgroup" class="ui-grid-viewport"  ng-style="colContainer.getViewportStyle()"><!-- tbody -->
   <div class="ui-grid-canvas">
-    <div ng-repeat="(rowRenderIndex, row) in rowContainer.renderedRows track by $index" class="ui-grid-row" ng-style="Viewport.rowStyle(rowRenderIndex)">
+    <div ng-repeat="(rowRenderIndex, row) in rowContainer.renderedRows track by $index" class="ui-grid-row" ng-style="Viewport.rowStyle(rowRenderIndex)" role="row">
       <div ui-grid-row="row" row-render-index="rowRenderIndex"></div>
     </div>
   </div>
