--- a/src/templates/ui-grid/ui-grid-footer.html
+++ b/src/templates/ui-grid/ui-grid-footer.html
@@ -1,9 +1,9 @@
-<div class="ui-grid-footer-panel ui-grid-footer-aggregates-row">
+<div class="ui-grid-footer-panel ui-grid-footer-aggregates-row"> <!-- tfooter -->
   <div class="ui-grid-footer ui-grid-footer-viewport">
     <div class="ui-grid-footer-canvas">
       <div class="ui-grid-footer-cell-wrapper" ng-style="colContainer.headerCellWrapperStyle()">
-        <div class="ui-grid-footer-cell-row">
-          <div ng-repeat="col in colContainer.renderedColumns track by col.uid" ui-grid-footer-cell col="col" render-index="$index" class="ui-grid-footer-cell ui-grid-clearfix"></div>
+        <div role="row" class="ui-grid-footer-cell-row">
+          <div role="gridcell" ng-repeat="col in colContainer.renderedColumns track by col.uid" ui-grid-footer-cell col="col" render-index="$index" class="ui-grid-footer-cell ui-grid-clearfix"></div>
         </div>
       </div>
     </div>
