Pinning and navigation issue #3459
When using arrow keys to nav and having columns pinned the table would
not scroll correctly.

--- a/src/less/body.less
+++ b/src/less/body.less
@@ -1,6 +1,7 @@
 
 .ui-grid-render-container {
   position: inherit;
+  float: left;
   // overflow: hidden;
 
   .border-radius(0, @gridBorderRadius, @gridBorderRadius, 0);
