Clicking on expand does not select the row

--- a/src/features/expandable/less/expandable.less
+++ b/src/features/expandable/less/expandable.less
@@ -12,8 +12,12 @@
     }
 
   }
-
-
 }
 
-.ui-grid-expandable-buttons-cell { }
+
+.ui-grid-cell.ui-grid-disable-selection.ui-grid-row-header-cell{
+  pointer-events: none;
+}
+.ui-grid-expandable-buttons-cell i{
+  pointer-events: all;
+}
