--- a/src/features/pagination/less/pagination.less
+++ b/src/features/pagination/less/pagination.less
@@ -27,48 +27,6 @@
     width: 50px;
     vertical-align: top;
   }
-
-  .first-bar {
-    width: 10px;
-    border-left: 2px solid #4d4d4d;
-    margin-top: -6px;
-    height: 12px;
-    margin-left: -3px;
-  }
-
-  .first-triangle {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 5px 8.7px 5px 0;
-    border-color: transparent #4d4d4d transparent transparent;
-    margin-left: 2px;
-  }
-
-  .next-triangle {
-    margin-left: 1px;
-  }
-
-  .prev-triangle {
-    margin-left: 0;
-  }
-
-  .last-triangle {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 5px 0 5px 8.7px;
-    border-color: transparent transparent transparent #4d4d4d;
-    margin-left: -1px;
-  }
-
-  .last-bar {
-    width: 10px;
-    border-left: 2px solid #4d4d4d;
-    margin-top: -6px;
-    height: 12px;
-    margin-left: 1px;
-  }
 }
 
 .ui-grid-pager-row-count-picker {
@@ -94,4 +52,22 @@
     margin-left: 10px;
     float: right;
   }
+}
+
+.ui-grid-pager-container {
+  .ui-grid-icon-to-previous {
+    .ui-grid-icon-play;
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
+    -webkit-transform: rotate(180);
+    -ms-transform: rotate(180);
+    transform: rotate(180);
+  }
+  button[disabled], html input[disabled] {
+    color: lightgrey;
+  }
+}
+
+// Hook for IE8-9
+:root .ui-grid-icon-to-previous {
+  filter: none;
 }
