--- a/src/templates/ui-grid/uiGridMenu.html
+++ b/src/templates/ui-grid/uiGridMenu.html
@@ -1,6 +1,11 @@
-<div class="ui-grid-menu" ng-if="shown">
-  <div class="ui-grid-menu-mid" ng-show="shownMid">
-    <div class="ui-grid-menu-inner">
+<div
+  class="ui-grid-menu"
+  ng-if="shown">
+  <div
+    class="ui-grid-menu-mid"
+    ng-show="shownMid">
+    <div
+    class="ui-grid-menu-inner">
       <button
         type="button"
         ng-focus="focus=true"
@@ -12,7 +17,9 @@
           ui-grid-one-bind-aria-label="i18n.close">
         </i>
       </button>
-      <ul role="menu" class="ui-grid-menu-items">
+      <ul
+        role="menu"
+        class="ui-grid-menu-items">
         <li
           ng-repeat="item in menuItems"
           role="menuitem"
