--- a/src/templates/ui-grid/uiGridRenderContainer.html
+++ b/src/templates/ui-grid/uiGridRenderContainer.html
@@ -4,8 +4,14 @@
   class="ui-grid-render-container"
   ng-style="{ 'margin-left': colContainer.getMargin('left') + 'px', 'margin-right': colContainer.getMargin('right') + 'px' }">
   <!-- All of these dom elements are replaced in place -->
-  <div ui-grid-header></div>
-  <div ui-grid-viewport></div>
-  <div ng-if="colContainer.needsHScrollbarPlaceholder()" class="ui-grid-scrollbar-placeholder" style="height:{{colContainer.grid.scrollbarHeight}}px"></div>
-  <div ui-grid-footer ng-if="grid.options.showColumnFooter"></div>
+  <ui-grid-header></ui-grid-header>
+  <ui-grid-viewport></ui-grid-viewport>
+  <div
+    ng-if="colContainer.needsHScrollbarPlaceholder()"
+    class="ui-grid-scrollbar-placeholder"
+    style="height:{{colContainer.grid.scrollbarHeight}}px">
+  </div>
+  <ui-grid-footer
+    ng-if="grid.options.showColumnFooter">
+  </ui-grid-footer>
 </div>
