--- a/src/features/tree-base/templates/treeBaseHeaderCell.html
+++ b/src/features/tree-base/templates/treeBaseHeaderCell.html
@@ -1,5 +1,8 @@
 <div>
-  <div class="ui-grid-cell-contents" col-index="renderIndex">
-    <ui-grid-tree-base-expand-all-buttons ></ui-grid-tree-base-expand-all-buttons>
+  <div
+    class="ui-grid-cell-contents"
+    col-index="renderIndex">
+    <ui-grid-tree-base-expand-all-buttons>
+    </ui-grid-tree-base-expand-all-buttons>
   </div>
 </div>
