--- a/src/features/tree-base/templates/treeBaseRowHeader.html
+++ b/src/features/tree-base/templates/treeBaseRowHeader.html
@@ -1,3 +1,5 @@
-<div class="ui-grid-cell-contents">
-  <ui-grid-tree-base-row-header-buttons></ui-grid-tree-base-row-header-buttons>
+<div
+  class="ui-grid-cell-contents">
+  <ui-grid-tree-base-row-header-buttons>
+  </ui-grid-tree-base-row-header-buttons>
 </div>
