fix(core): fix template issue in angular 1.2

--- a/src/templates/ui-grid/uiGridRenderContainer.html
+++ b/src/templates/ui-grid/uiGridRenderContainer.html
@@ -4,8 +4,8 @@
   class="ui-grid-render-container"
   ng-style="{ 'margin-left': colContainer.getMargin('left') + 'px', 'margin-right': colContainer.getMargin('right') + 'px' }">
   <!-- All of these dom elements are replaced in place -->
-  <ui-grid-header></ui-grid-header>
-  <ui-grid-viewport></ui-grid-viewport>
+  <div ui-grid-header></div>
+  <div ui-grid-viewport></div>
   <div
     ng-if="colContainer.needsHScrollbarPlaceholder()"
     class="ui-grid-scrollbar-placeholder"
