fix(core): IE does not render correctly when binding is used in style. use ng-style instead

--- a/src/templates/ui-grid/uiGridRenderContainer.html
+++ b/src/templates/ui-grid/uiGridRenderContainer.html
@@ -9,7 +9,7 @@
   <div
     ng-if="colContainer.needsHScrollbarPlaceholder()"
     class="ui-grid-scrollbar-placeholder"
-    style="height:{{colContainer.grid.scrollbarHeight}}px">
+    ng-style="{height:colContainer.grid.scrollbarHeight + 'px'}">
   </div>
   <ui-grid-footer
     ng-if="grid.options.showColumnFooter">
